assets/css/cart.css
* {font-family: 'Mitr', 'Noto Sans KR', sans-serif;}

.cart-container{
    margin-top: 20vh;
}

.hr-line1{
    width: 50px;
    border-top: 1px solid black;
}

.hr-line2{
    width: 90%;
    border-top: 1px solid black;
    margin: auto;
    
}

.header{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.list-product{
    margin: auto;
    width: 95vw;
    height: 23em;
    overflow-y: scroll;
    overflow-x: hidden;
    scrollbar-width: thin;
}

.product-container{
    display: inline-grid;
    grid-template-columns: 20vw 20vw 20vw 20vw;
    grid-gap: 5%;
    justify-items: center;
    align-items: center;
    padding: 3% 15% 5% 0%

}

div.product{
    max-width: 150px;
}

.product h4{
    text-align: center;
    min-width: 200px;
}
.product{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin: 0px 0px 2px 0px;
}

#p1{
    max-width: 100%;
}

.record-name{
    text-align: center;
}

.product-num{

    justify-content: center
}

.btn-minus{
    cursor: pointer;
}

.btn-plus{
    cursor: pointer;
}

.num-p{
    background-color: #f6f6f6;
    text-align: center;
    padding: 10px;
    width: 40px;
    outline: none;
    border: none;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1; 
}
 
::-webkit-scrollbar-thumb {
  background: #888; 
}

::-webkit-scrollbar-thumb:hover {
  background: #555; 
}

.cart-below{
    width: 100%;
}

.cart-grid{
    position: relative;
    display: inline-grid;
    grid-template-columns: 50vw 50vw;
    padding: 5% 10% 10% 10%;

}

.cart-grid p {
    font-size: 120%;
}

#input-instruc{
    background-color: #f9f7f7;
    padding: 10px 12px;
    border: none;
    width: 75%;
    height: 70%;
}

.cartBelow-right{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-right: 10%;
}

.btnProduct-container button{
    position: relative;
    right: 0;
    background-color: #116979;
    color: white;
    margin: 10px 0 0 0;
    min-width: 155px;
    min-height: 56px;
    border-radius: 28px;
    font-size: 1.2em;
    border: none;
    outline: none;
    cursor: pointer;

}

.btnProduct-container button:hover{
    background-color: #116979;

}

.btnProduct-container button:focus,
.btnProduct-container button:active{
    border: none;
    outline: none;
}

@media only screen and (max-width: 550px) {
        .product-container{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        padding: 5% 0;
         
    }
}
@media only screen and (max-width: 770px){

    .cart-grid{
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }    

    #input-instruc{
    width: 68vw;
    height: 10vh;
    }

    .cartBelow-right{
        padding: 5% 0;
    }

}

